style.css
:root {
  --primary: #3099C9;
  --dark: #000;
  --light: #fff;
  --shadow: 0 1px 5px rgba(245, 163, 34, 0.8);
}

html {
  box-sizing: border-box;
  font-family: 'Work Sans', sans-serif;
  color: var(--light);
}

body {
  background: #fff;
  margin: 30px 50px;
  line-height: 1.4;
}

/* Buttons in info, boxes, info sections */

.btn {
  background: rgba(245, 163, 34);
  color: var(--light);
  padding: 0.6rem 1.3rem;
  text-decoration: none;
  border: 0;
  box-shadow: 0 1px 5px rgb(255, 255, 255, 0.8);
}

.btn:hover {
  background: var(--light);
  color: rgba(245, 163, 34);
}

img {
  max-width: 100%;
}

.wrapper {
  display: grid;
  grid-gap: 20px;
}

/* navigation styles start here */

.main-nav ul {
  display: grid;
  grid-gap: 20px;
  padding: 0;
  list-style: none;
  grid-template-columns: repeat(4, 1fr);
}

.main-nav a {
  background: var(--primary);
  display: block;
  text-decoration: none;
  padding: 0.8rem;
  text-align: center;
  color: var(--light);
  text-transform: uppercase;
  font-size: 1.1rem;
  box-shadow: var(--shadow);
}

.main-nav a:hover {
  background: var(--light);
  color: var(--primary);
}

/* top container */

.top-container {
  display: grid;
  grid-gap: 20px;
  grid-template-areas: 'showcase showcase top-box-a' 'showcase showcase top-box-b'
}

.learn {
  background: var(--primary);
  display: grid;
  align-items: center;
  justify-items: center;
  box-shadow: var(--shadow);
  padding: 1.5rem;
}

.learn p {
  margin-top: 0px;
}

.learn-box.b {
  text-align: center;
}

/* showcase */

.showcase {
  grid-area: showcase;
  min-height: 400px;
  background: url(images/scratchjr.jpg);
  background-size: cover;
  background-position: center;
  overflow: hidden;
  padding: 3rem;
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: baseline;
  box-shadow: var(--shadow);
}

.showcase p {
  font-size: 1.5rem;
  margin-top: 0;
  color: var(--light);
  text-align: center;
}

/* about page */

.about {
  grid-area: showcase;
  min-height: 400px;
  padding: 3rem;
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: baseline;
  box-shadow: var(--shadow);
}

.about p {
  color: var(--dark);
  font-size: 1.5rem;
  margin-top: 0;
}

h2 {
  color: var(--primary);
}

h4 {
  text-transform: uppercase;
  margin-bottom: 0px;
  text-align: center;
}

p {}

/* top box */

.top-box {
  background: var(--primary);
  display: grid;
  align-items: center;
  justify-items: center;
  box-shadow: var(--shadow);
  padding: 1.5rem;
}

.top-box-a {
  grid-area: top-box-a;
}

.top-box-b {
  grid-area: top-box-b;
}

/*  boxes section */

.boxes {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
}

.box {
  background: var(--primary);
  text-align: center;
  padding: 1.5rem 2rem;
  box-shadow: var(--shadow);
}

/* info section */

.info {
  background: var(--primary);
  box-shadow: var(--shadow);
  display: grid;
  grid-gap: 50px;
  grid-template-columns: repeat(2, 1fr);
  padding: 3rem;
}

/* gallery section */

.gallery {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
}

.gallery img {
  height: 200px;
  width: 100%;
  box-shadow: var(--shadow);
}

/* footer */

footer {
  margin-top: 2rem;
  background: var(--primary);
  color: var(--light);
  text-align: center;
  padding: .3rem;
  box-shadow: var(--shadow);
}

.fa-bolt {
  color: #f5a322;
}

/* media queries */

@media(max-width: 700px) {
  .top-container {
    grid-template-areas: 'showcase showcase' 'top-box-a top-box-b'
  }
  .showcase h1 {
    font-size: 2.5rem;
  }
  .main-nav ul {
    grid-template-columns: 1fr;
  }
  .info {
    grid-template-columns: 1fr;
  }
  .info .btn {
    display: block;
    text-align: center;
    margin: auto;
  }
}

@media (max-width: 500px) {
  .top-container {
    grid-template-areas: 'showcase' 'top-box-a' 'top-box-b';
  }
}

